# mcp-server-workshop

./: .gitignore  GLOSSARY.md  README.md  package-lock.json  workshop-intro.md  workshop_setup_instructions.md
python/animal-rescue-mcp-server/: .gitignore  README.md  TEST_GUIDE.md  part-1-instructions.md  part-2-instructions.md  pyproject.toml  pytest.ini  requirements.txt  server.py
python/animal-rescue-mcp-server/animal_rescue_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python/animal-rescue-mcp-server/src/: __init__.py  animal_data.py  animal_rescue_service.py  main.py  simple_server.py
python/animal-rescue-mcp-server/tests/: __init__.py  conftest.py  test_animal_rescue_service.py  test_animal_rescue_service_fixed.py  test_mcp_server.py
typescript/animal-rescue-mcp-server/: README.md  cloudflare-hosting.md  package-lock.json  package.json  part-1-instructions.md  part-2-instructions.md
typescript/animal-rescue-mcp-server/src/: animal-data.ts  animal-rescue-service.ts  completed-index.ts  index.ts
